# openwebrtc

./: .gitmodules  CONTRIBUTING.md  COPYING  LICENSE  Makefile.am  README.md  ROADMAP.md  autogen.sh  build.sh  configure.ac  git.mk  index.html  libopenwebrtc.exp  libtool.diff
bindings/: Makefile.am
bindings/java/: Makefile.am  base_generator.py  c_generator.py  config.py  gen_jni.py  gir_parser.py  java_generator.py  java_type_signatures.py  owr_bridge_jni.c  standard_types.py  type_registry.py
bindings/java/bridge/com/ericsson/research/owr/: OwrBridge.java
bridge/: Makefile.am  daemon.c  openwebrtc-bridge-0.1.pc  openwebrtc-bridge-0.1.pc.in  openwebrtc-bridge-0.3.pc.in  owr_bridge.c  owr_bridge.h
bridge/client/: Makefile.am  domutils.js  sdp.js  webrtc.js
bridge/seed/: Makefile.am  websocket.js  workerinit.js  workerutils.js
bridge/shared/: Makefile.am  wbjsonrpc.js
bridge/worker/: Makefile.am  bridgeserver.js  peerhandler.js
docs/: Makefile.am
docs/gtk-doc/dev/: OwrAudioPayload.html  OwrAudioRenderer.html  OwrBus.html  OwrCandidate.html  OwrDataChannel.html  OwrDataSession.html  OwrImageRenderer.html  OwrImageServer.html  OwrLocalMediaSource.html  OwrMediaRenderer.html  OwrMediaSession.html  OwrMediaSource.html  OwrMessageOrigin.html  OwrPayload.html  OwrRemoteMediaSource.html  OwrSession.html  OwrTransportAgent.html  OwrVideoPayload.html  OwrVideoRenderer.html  OwrWindowRegistry.html  annotation-glossary.html  api-index-full.html  ch01.html  deprecated-api-index.html  index.html  index.sgml  object-tree.html  openwebrtc-owr-local.html  openwebrtc-owr-types.html  openwebrtc-owr.html  openwebrtc.devhelp2
docs/reference/: Makefile.am
docs/reference/owr/: Makefile.am
gen_jni/: Makefile.am  gen_jni.py  owr_bridge_jni.c
gen_jni/bridge/com/ericsson/research/owr/: OwrBridge.java
git_hooks/: chain_hook  install_hooks.sh  pre-commit  pre-push
gst/: Makefile.am  openwebrtc-gst-0.3.pc.in  owr_gst_audio_renderer.c  owr_gst_audio_renderer.h  owr_gst_media_source.c  owr_gst_media_source.h  owr_gst_video_renderer.c  owr_gst_video_renderer.h
local/: Makefile.am  owr_audio_renderer.c  owr_audio_renderer.h  owr_device_list.c  owr_device_list_avf.m  owr_device_list_avf_private.h  owr_device_list_private.h  owr_gst_local_media_source.c  owr_gst_local_media_source.h  owr_image_renderer.c  owr_image_renderer.h  owr_image_renderer_private.h  owr_image_server.c  owr_image_server.h  owr_local.c  owr_local.h  owr_local_media_source.c  owr_local_media_source.h  owr_local_media_source_private.h  owr_media_renderer.c  owr_media_renderer.h  owr_media_renderer_private.h  owr_uri_source.c  owr_uri_source.h  owr_uri_source_agent.c  owr_uri_source_agent.h  owr_uri_source_private.h  owr_video_renderer.c  owr_video_renderer.h  owr_video_renderer_private.h  owr_window_registry.c  owr_window_registry.h  owr_window_registry_private.h
owr/: Makefile.am  openwebrtc-0.1.pc.in  owr.c  owr.h  owr_bus.c  owr_bus.h  owr_bus_private.h  owr_inter_sink.c  owr_inter_sink.h  owr_inter_src.c  owr_inter_src.h  owr_media_source.c  owr_media_source.h  owr_media_source_private.h  owr_message_origin.c  owr_message_origin.h  owr_message_origin_private.h  owr_private.h  owr_types.c  owr_types.h  owr_utils.c  owr_utils.h  symbols_to_source.py  symbols_to_sym.py
tests/: Makefile.am  list_devices.c  test_bus.c  test_client.c  test_client.py  test_crypto_utils.c  test_data_channel.c  test_gst_io.c  test_init.c  test_js_argument_checker.html  test_sdp_js.html  test_self_view.c  test_send_receive.c  test_uri.c  test_utils.c  test_utils.h  test_utils.js
transport/: Makefile.am  owr_arrival_time_meta.c  owr_arrival_time_meta.h  owr_audio_payload.c  owr_audio_payload.h  owr_candidate.c  owr_candidate.h  owr_candidate_private.h  owr_crypto_utils.c  owr_crypto_utils.h  owr_data_channel.c  owr_data_channel.h  owr_data_channel_private.h  owr_data_channel_protocol.h  owr_data_session.c  owr_data_session.h  owr_data_session_private.h  owr_media_session.c  owr_media_session.h  owr_media_session_private.h  owr_payload.c  owr_payload.h  owr_payload_private.h  owr_remote_media_source.c  owr_remote_media_source.h  owr_remote_media_source_private.h  owr_session.c  owr_session.h  owr_session_private.h  owr_transport_agent.c  owr_transport_agent.h  owr_video_payload.c  owr_video_payload.h
